# tools

./: .gitignore  README.md
.github/workflows/: onurpi.yml  pi-extensions.yml  pngscrub.yml  static.yml  tilekit.yml
acpxflow/: README.md  package.json
acpxflow/src/: acpx.js  cli.js  flow.js  github.js  index.js
acpxflow/src/flows/: pr-triage.flow.js
acpxflow/test/: flow.test.js
agents/: AGENTS.md  README.md  sync-skills.py
agents/acpx/: README.md  run-flow.js
agents/acpx/lib/: json.js  prompts.js
agents/acpx/test/: flow.test.js
agents/onurpi/: .prettierrc.json  AGENTS.md  README.md  eslint.config.mjs  package-lock.json  package.json  settings.json  slophammer.yml  stryker.config.mjs  vitest.config.ts
agents/pi-extensions/: .gitignore  .prettierignore  AGENTS.md  README.md  VENDORING.md  eslint.config.mjs  package-lock.json  package.json  slophammer.yml  stryker.config.mjs  tsconfig.json  vitest.config.ts
agents/prompts/: implement-plan.md  land-ready-pr.md  pr-issue-triage.md  sherlock-holmes-mode.md
agents/workflows/: pr-automation.md  pr-triage.flow.js  pr-triage.flow.ts
chardiff/: README.md  index.html
claude-code-data/: .gitignore  README.md  STRUCTURE.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
claude-code-data/docs/: README.md  claude-code-data-storage-analysis.md  conversation-format-specification.md  data-models-and-schemas.md  implementation-notes.md
claude-code-data/src/: index.ts
claude-code-data/test-data/: example-conversation.jsonl
codex-session-extract/: Cargo.toml  README.md
codex-session-extract/docs/: rollout-format.md
codex-session-extract/src/: main.rs
codex-tools/: Cargo.toml  README.md
codex-tools/docs/: rollout-format.md
codex-tools/src/: main.rs
dotfiles/: .Xresources  .aerospace.toml  .conkyrc  .gitmodules  .vimrc  .xinitrc  .zshrc  Makefile  README.md  Xdefaults  Xresources  bashrc  conky_config.lua  conkyrc  copy.sh  emacs  vimrc  xinitrc  zshrc
dotfiles/.i3/: config  i3status.conf
dotfiles/ghostty/: common.ghostty  linux.ghostty  macos.ghostty
dotfiles/i3/: config  i3status.conf
dotfiles/scripts/: cmux-prefs  iterm2-prefs
padify/: Cargo.toml  README.md  install.sh
padify/src/: main.rs
pngscrub/: Cargo.toml  README.md
pngscrub/src/: lib.rs  main.rs
prooompter/: HOW_TO_PROMPT.md  README.md  main.py  pyproject.toml
prooompter/src/prooompter/: __init__.py  __main__.py  cli.py
rmdbg/: Cargo.toml  README.md
rmdbg/src/: main.rs
spawn/: Cargo.toml  README.md
spawn/examples/: todos.md
spawn/src/: main.rs
tilekit/: .gitignore  AGENTS.md  README.md  pyproject.toml  slophammer.yml
tilekit/scripts/: check-mutation.py  check-slophammer.sh
tilekit/src/tilekit/: __init__.py  __main__.py  cli.py  core.py  images.py
tilekit/tests/: test_tilekit.py
workflows/: branch.flow.js  echo.flow.js  pr-triage.flow.js  two-turn.flow.js
(+207 files in other folders)
