[package]
name = "codex-session-extract"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "codex-session-extract"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
