[package]
name = "codex-tools"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "codex-tools"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.37", features = ["bundled"] }
