[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tilekit"
version = "0.1.0"
description = "Generate balanced, non-overlapping image tile patterns"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Onur Solmaz" }]
dependencies = [
    "cairosvg>=2.7,<3",
    "numpy>=2,<3",
    "pillow>=12.3,<13",
]

[project.scripts]
tilekit = "tilekit.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tilekit"]

[dependency-groups]
dev = [
    "mypy>=1.16,<2",
    "mutmut>=3.3,<4",
    "pip-audit>=2.9,<3",
    "pytest>=9.0.3,<10",
    "pytest-cov>=6.2,<7",
    "ruff>=0.12,<0.13",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C90", "ANN", "RUF", "TID"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = "cairosvg"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["src/tilekit"]
branch = true

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.mutmut]
source_paths = ["src/tilekit/images.py"]
also_copy = [
    "src/tilekit/__init__.py",
    "src/tilekit/cli.py",
    "src/tilekit/core.py",
    "src/tilekit/py.typed",
]
pytest_add_cli_args_test_selection = ["tests/"]
